Fix CI failures (#44)
* Tentative fix for CI failures

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Cache in memory

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Remove memory cache option

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Add an all-grant policy

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Remove transitive dependencies

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Remove windows from github CI

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Cancel the timeout thread without interrupting threads

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Rename workflows

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Add --enable-native-access=ALL-UNNAMED option

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Add all module path to jvm args

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Specify modules names to add in jvmargs

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Specify nativeimage as a dependency but remove it from add-modules

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Set graal-sdk as a dependency

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Quite javadoc warning

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Revert modifications to plugin-security.policy

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Fix CI trigger

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Revert "Revert modifications to plugin-security.policy"

This reverts commit 20d347f01efbbb9dc86828ed2d191bb46dec8af1.

---------

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>